[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
bcrypt = "0.11"
uuid = {version = "1", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

