[package]
name = "blog_core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "^0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
bcrypt = "0.11"
uuid = {version = "1", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.2"
clap = { version = "4", features = ["derive"] }
#anyhow = "1.0"
jsonwebtoken = "^9.3.0"
shaku= { version = "0.6.2", features = ["derive"] }
async-trait = "0.1.88"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = "0.6.2"
