[package]
name = "blog_core"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
sea-orm = { version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-rustls", "mock", "debug-print"] }

[dependencies]
base64 = {version = "0.22.1"}
reqwest = {version ="0.12.5", features = ["json", "rustls-tls", "http2", "charset"]}
rand = "0.8.5"
random-string="1.0"
derive_builder = "0.20.2"
axum = {version = "0.8.1", features = ["multipart"]}
axum-extra = { version = "0.10.1", features = ["cookie"] }
time = "0.3.37"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
bcrypt = "0.11"
uuid = {version = "1.16", features = ["v4", "v7"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.2"
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "^9.3.0"
shaku= { version = "0.6.2", features = ["derive"] }
async-trait = "0.1.88"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["cors"] }
image = { version = "0.25.1"}
